sửa entity ChucVu thêm loaiCV, sửa SQL sDT là numberic và thêm loaiCV nvarchar(2). Hoàn thành việc chức năng lấy dữ liệu lên.

--- a/db.properties
+++ b/db.properties
@@ -1,3 +1,3 @@
 dburl=jdbc:sqlserver://localhost:1433;databaseName=QLLSPAHG;encrypt=true;trustServerCertificate=true;
-user=20053331
-password=20053331
+user=sa
+password=123
