--- a/userData.properties
+++ b/userData.properties
@@ -1,5 +1,5 @@
 #userData.properties
-#Wed Dec 13 22:00:52 ICT 2023
+#Thu Dec 14 22:28:00 ICT 2023
 hoNV=Burt
 maCV=CVNVHC
 maNV=NV100000
@@ -7,4 +7,4 @@ maPB=PBHCNS
 tenCV=Nh\u00E2n vi\u00EAn h\u00E0nh ch\u00EDnh
 tenNV=Kelly
 tenPB=Ph\u00F2ng nh\u00E2n s\u1EF1
-vaiTro=Qu\u1EA3n l\u00ED
+vaiTro=Qu\u1EA3n l\u00FD h\u00E0nh ch\u00EDnh
