Comit sua file insert

--- a/userData.properties
+++ b/userData.properties
@@ -1,10 +1,10 @@
 #userData.properties
-#Thu Dec 14 22:28:00 ICT 2023
-hoNV=Burt
-maCV=CVNVHC
+#Fri Dec 15 00:30:50 ICT 2023
+hoNV=Nguy\u1EC5n V\u0103n
+maCV=CVNVQL
 maNV=NV100000
-maPB=PBHCNS
-tenCV=Nh\u00E2n vi\u00EAn h\u00E0nh ch\u00EDnh
-tenNV=Kelly
-tenPB=Ph\u00F2ng nh\u00E2n s\u1EF1
+maPB=PBHCQL
+tenCV=Nh\u00E2n vi\u00EAn qu\u1EA3n l\u00FD
+tenNV=Gi\u00E0u
+tenPB=Ph\u00F2ng qu\u1EA3n l\u00FD
 vaiTro=Qu\u1EA3n l\u00FD h\u00E0nh ch\u00EDnh
